--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-1" id="icon"></div>
+            <div class="col-md-6 col-md-offset-5">
+                <div class="row">
+                    <div id="nav" class="col-md-3 col-md-offset-1"></div>
+                    <div id="nav" class="col-md-3 col-md-offset-1"></div>
+                    <div id="nav" class="col-md-3 col-md-offset-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="main col-sm-12"></div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
